--- a/src/ywca_database/YWCA_DatabaseZeus.form
+++ b/src/ywca_database/YWCA_DatabaseZeus.form
@@ -124,9 +124,11 @@
             <Component class="javax.swing.JComboBox" name="jComboBoxAccessHW">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="2">
+                  <StringArray count="4">
                     <StringItem index="0" value="Groups"/>
                     <StringItem index="1" value="Counseling_2015"/>
+                    <StringItem index="2" value="Wrap Arround Wed"/>
+                    <StringItem index="3" value="HHAA"/>
                   </StringArray>
                 </Property>
               </Properties>
